chore(deps): upgrade cryptography and requests for CVE-2026-26007

--- a/hypercode-core/pytest.ini
+++ b/hypercode-core/pytest.ini
@@ -1,9 +1,40 @@
-
 [pytest]
 asyncio_mode = auto
 testpaths = tests
 python_files = test_*.py
-addopts = -v --cov=app --cov=main --cov-report=term-missing --cov-report=html --cov-report=xml --cov-branch
+
+addopts = 
+    -v 
+    --tb=short
+    --cov=app 
+    --cov=main
+    --cov-report=term-missing:skip-covered
+    --cov-report=html:htmlcov
+    --cov-report=xml:coverage.xml
+    --cov-branch
+
 markers =
-    experimental: marks tests as experimental/WIP (deselect with '-m "not experimental"')
-    flaky: marks tests as flaky/timing-dependent (deselect with '-m "not flaky"')
+    experimental: marks tests as experimental/WIP
+    flaky: marks tests as flaky/timing-dependent
+    slow: marks tests as slow
+    unit: unit tests
+    integration: integration tests
+
+[coverage:run]
+branch = true
+parallel = true
+omit =
+    */tests/*
+    */site-packages/*
+    */__pycache__/*
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise AssertionError
+    raise NotImplementedError
+    if __name__ == .__main__.:
+    if TYPE_CHECKING:
+    @abstractmethod
+precision = 2
