--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -4,8 +4,8 @@ redis>=5.0.1
 pydantic>=2.9.0
 pydantic-settings>=2.4.0
 python-multipart>=0.0.9
-requests==2.31.0
-cryptography>=42.0.0
+requests==2.32.5
+cryptography==46.0.5
 pyjwt>=2.8.0
 passlib[bcrypt]==1.7.4
 openai>=1.50.0
