--- a/hypercode-core/requirements.txt
+++ b/hypercode-core/requirements.txt
@@ -15,7 +15,7 @@ pytest-cov==4.1.0
 coverage==7.4.0
 httpx==0.26.0
 prometheus-fastapi-instrumentator==6.1.0
-sentry-sdk==1.40.0
+sentry-sdk>=2.8.0
 structlog==24.1.0
 opentelemetry-distro
 opentelemetry-exporter-otlp
@@ -27,4 +27,3 @@ uvicorn[standard]>=0.30.0
 websockets>=12.0
 tomlkit>=0.12.0
 numpy>=1.24.0
-python-jose[cryptography]
